<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FirstPage" >

   <TextView
       android:id="@+id/textView1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_alignRight="@+id/listView1"
       android:layout_marginTop="41dp"
       android:layout_toRightOf="@+id/editText1"
       android:scrollbars="vertical"
       android:text="@string/OnvaneKala"
       android:textAppearance="?android:attr/textAppearanceLarge" />

   <EditText
       android:id="@+id/editText1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignTop="@+id/textView1"
       android:ems="8"
       android:hint="@string/textboxHint"
       android:inputType="textPersonName" >

       <requestFocus />
   </EditText>

   <Button
       android:id="@+id/button1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/listView1"
       android:layout_below="@+id/editText1"
       android:text="@string/searchButton"
       android:onClick="SearchButtonFunc" />

   <ListView
       android:id="@+id/listView1"
       android:layout_width="match_parent"
       android:layout_height="500dp"
       android:layout_alignLeft="@+id/editText1"
       android:layout_below="@+id/button1"
       android:layout_marginTop="21dp" 
       
        >
   </ListView>

</RelativeLayout>
