<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplayContactDetails" >
    <TableLayout 
    android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

       
        
    
      <!-- just draw a red line -->
    <View
        android:layout_height="2dip"
        android:background="#FF0000" />
 
    <!-- 2 columns -->
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:gravity="right"  
        >
        <TextView
            android:id="@+id/txtVIdValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:layout_marginRight="30dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtVIdH"
            android:text="@string/HeaderRowId"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>
    
      <!-- just draw a red line -->
    <View
        android:layout_height="2dip"
        android:background="#FF0000" />
    
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:gravity="right"  
        >
        <TextView
            android:id="@+id/txtVNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtVNameH"
            android:text="@string/HeaderRowName"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>
    
      <!-- just draw a red line -->
    <View
        android:layout_height="2dip"
        android:background="#FF0000" />
    
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:gravity="right"  
        >
        <TextView
            android:id="@+id/txtVRegionNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtVRegionNameH"
            android:text="@string/HeaderRowRegionName"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>
    
      <!-- just draw a red line -->
    <View
        android:layout_height="2dip"
        android:background="#FF0000" />
    
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:gravity="right"  
        >
        <TextView
            android:id="@+id/txtVPhoneNumber1Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtVPhoneNumber1H"
            android:text="@string/HeaderRowPhoneNumber1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>
    
      <!-- just draw a red line -->
    <View
        android:layout_height="2dip"
        android:background="#FF0000" />
    
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:gravity="right"  
        >
        <TextView
            android:id="@+id/txtVPhoneNumber2Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtVPhoneNumber2H"
            android:text="@string/HeaderRowPhoneNumber2"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>
    
      <!-- just draw a red line -->
    <View
        android:layout_height="2dip"
        android:background="#FF0000" />
    
    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:gravity="right"  
        >
        <TextView
            android:id="@+id/txtVPhoneNumber3Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtVPhoneNumber3H"
            android:text="@string/HeaderRowPhoneNumber3"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>
    
      <!-- just draw a red line -->
    <View
        android:layout_height="2dip"
        android:background="#FF0000" />
    
    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:gravity="right"  
        >
        <TextView
            android:id="@+id/txtVPhoneNumber4Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtVPhoneNumber4H"
            android:text="@string/HeaderRowPhoneNumber4"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>
    
    
      <!-- just draw a red line -->
    <View
        android:layout_height="2dip"
        android:background="#FF0000" />
    

    
    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:gravity="right"  
        >
        <TextView
            android:id="@+id/txtVAddressValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtVAddressH"
            android:text="@string/HeaderRowAddress"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>
    
    
      <!-- just draw a red line -->
    <View
        android:layout_height="2dip"
        android:background="#FF0000" />
    

    
    <TableRow
        android:id="@+id/tableRow9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:gravity="right"  
        >
        <TextView
            android:id="@+id/txtVMobileValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtVMobileH"
            android:text="@string/HeaderRowMobile"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>
    
    
      <!-- just draw a red line -->
    <View
        android:layout_height="2dip"
        android:background="#FF0000" />

    
    <TableRow
        android:id="@+id/tableRow10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:gravity="right"  
        >
        <TextView
            android:id="@+id/txtVFaxValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtVFaxH"
            android:text="@string/HeaderRowFax"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>
    
    
      <!-- just draw a red line -->
    <View
        android:layout_height="2dip"
        android:background="#FF0000" />

    
    <TableRow
        android:id="@+id/tableRow11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:gravity="right"  
        >
        <TextView
            android:id="@+id/txtVDepositValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtVDepositH"
            android:layout_width="wrap_content"
            android:text="@string/HeaderRowDeposit"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>
    
    
      <!-- just draw a red line -->
    <View
        android:layout_height="2dip"
        android:background="#FF0000" />

    
    <TableRow
        android:id="@+id/tableRow12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:gravity="right"  
        >
        <TextView
            android:id="@+id/txtVDetectionValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtVDetectionH"
            android:text="@string/HeaderRowDetection"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>
    
    
      <!-- just draw a red line -->
    <View
        android:layout_height="2dip"
        android:background="#FF0000" />

  
</TableLayout>


</RelativeLayout>
